--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Weather App</title>
 </head>
 <body>
+  <h1>Weather App</h1>
   <div class="container">
     <h1>Weather App</h1>
     <input type="text" id="searchInput" placeholder="Enter Country">
